--- a/MagazineManagment.ClientApplication/Views/ProductClient/Delete.cshtml
+++ b/MagazineManagment.ClientApplication/Views/ProductClient/Delete.cshtml
@@ -11,7 +11,7 @@
 
 <h3>Are you sure to delete this record?</h3>
 
-<form asp-formhelper="true" asp-action="Delete" asp-controller="ProductClient" method="post" method="post" asp-antiforgery="true" asp-resetFormAfterSuccess="false" asp-enableButtonAfterSuccess="false">
+<form asp-formhelper="true" asp-action="Delete" asp-controller="ProductClient" method="post" method="post" asp-antiforgery="true" asp-resetFormAfterSuccess="false" asp-enableButtonAfterSuccess="false" onsubmit="formVlidation()">
     <input type="submit" value="Yes" class="btn btn-danger" />
     <a asp-action="Index" asp-controller="ProductClient" class="btn btn-green">No</a>
     <br />
@@ -38,5 +38,11 @@
         <span asp-validation-for="CreatedBy" class="text-danger"></span>
     </div>
 </form>
+
+<div class="loadingio-spinner-pulse-74mroih09kc" id="loader">
+    <div class="ldio-p03kydz5gtb">
+        <div></div><div></div><div></div>
+    </div>
+</div>
 
 
