--- a/MagazineManagment.ClientApplication/Views/ProfileClient/AsingRoleToUsers.cshtml
+++ b/MagazineManagment.ClientApplication/Views/ProfileClient/AsingRoleToUsers.cshtml
@@ -11,7 +11,7 @@
 
 <br />
 <br />
-<form asp-formhelper="true" method="post" asp-action="AsingRoleToUsers" asp-controller="ProfileClient" asp-antiforgery="true" asp-resetFormAfterSuccess="false" asp-enableButtonAfterSuccess="false">
+<form asp-formhelper="true" method="post" asp-action="AsingRoleToUsers" asp-controller="ProfileClient" asp-antiforgery="true" asp-resetFormAfterSuccess="false" asp-enableButtonAfterSuccess="false" onsubmit="formVlidation()">
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
     <div class="card">
         <div class="card-header">
@@ -45,3 +45,9 @@
         </div>
     </div>
 </form>
+
+<div class="loadingio-spinner-pulse-74mroih09kc" id="loader">
+    <div class="ldio-p03kydz5gtb">
+        <div></div><div></div><div></div>
+    </div>
+</div>
