--- a/MagazineManagment.ClientApplication/Views/CategoryClient/Delete.cshtml
+++ b/MagazineManagment.ClientApplication/Views/CategoryClient/Delete.cshtml
@@ -8,9 +8,8 @@
     ViewData["Title"] = "Delete";
 }
 
-<form asp-formhelper="true" asp-action="Delete" asp-controller="CategoryClient" method="post" asp-antiforgery="true" asp-resetFormAfterSuccess="false" asp-enableButtonAfterSuccess="false">
+<form asp-formhelper="true" asp-action="Delete" asp-controller="CategoryClient" method="post" asp-antiforgery="true" asp-resetFormAfterSuccess="false" asp-enableButtonAfterSuccess="false" onsubmit="formVlidation()">
      <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-
     <div class="form-group">
         <h2>Are u sure to delte this record ?  </h2>
         <p>Name : @Model.CategoryName</p>
@@ -20,5 +19,10 @@
     <input type="hidden" readonly asp-for="Id" />
     <input type="hidden" readonly asp-for="CategoryName" />
     <input type="submit" value="Delete category" class="btn btn-danger" />
-    
 </form>
+
+<div class="loadingio-spinner-pulse-74mroih09kc" id="loader">
+    <div class="ldio-p03kydz5gtb">
+        <div></div><div></div><div></div>
+    </div>
+</div>
