--- a/MagazineManagment.ClientApplication/Views/ProfileClient/Create.cshtml
+++ b/MagazineManagment.ClientApplication/Views/ProfileClient/Create.cshtml
@@ -8,7 +8,7 @@
     ViewData["Title"] = "Create";
 }
 
-<form asp-formhelper="true" asp-action="Create" asp-controller="ProfileClient" method="post" asp-antiforgery="true" asp-resetFormAfterSuccess="false" asp-enableButtonAfterSuccess="false">
+<form asp-formhelper="true" asp-action="Create" asp-controller="ProfileClient" method="post" asp-antiforgery="true" asp-resetFormAfterSuccess="false" asp-enableButtonAfterSuccess="false" onsubmit="formVlidation()">
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
     <div class="form-group">
         <label asp-for="RoleName" ></label>
@@ -18,3 +18,9 @@
     <br />
     <input type="submit" value="Create role" class="btn btn-primary" />
 </form>
+
+<div class="loadingio-spinner-pulse-74mroih09kc" id="loader">
+    <div class="ldio-p03kydz5gtb">
+        <div></div><div></div><div></div>
+    </div>
+</div>
