--- a/MagazineManagment.ClientApplication/Views/ProfileClient/Update.cshtml
+++ b/MagazineManagment.ClientApplication/Views/ProfileClient/Update.cshtml
@@ -8,7 +8,7 @@
     ViewData["Title"] = "Update";
 }
 
-<form asp-formhelper="true" asp-action="Update" asp-controller="ProfileClient" method="post" asp-antiforgery="true" asp-resetFormAfterSuccess="false" asp-enableButtonAfterSuccess="false">
+<form asp-formhelper="true" asp-action="Update" asp-controller="ProfileClient" method="post" asp-antiforgery="true" asp-resetFormAfterSuccess="false" asp-enableButtonAfterSuccess="false" onsubmit="formVlidation()">
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
     <div class="form-group">
         <label asp-for="RoleName"></label>
@@ -19,12 +19,21 @@
     <br />
     <input type="submit" class="btn btn-green" value="Update" />
 </form>
+
 <br />
+
 <div class="card">
     <div class="card-header">
         <h2>Add users from this role</h2>
     </div>
     <div class="card-body">
         <a asp-action="AsingRoleToUsers" asp-controller="ProfileClient" asp-route-id="@Model.RoleId" class="btn btn-green">Go to page</a>
+    </div>
+</div>
+
+
+<div class="loadingio-spinner-pulse-74mroih09kc" id="loader">
+    <div class="ldio-p03kydz5gtb">
+        <div></div><div></div><div></div>
     </div>
 </div>
