--- a/MagazineManagment.ClientApplication/wwwroot/css/site.css
+++ b/MagazineManagment.ClientApplication/wwwroot/css/site.css
@@ -2,74 +2,60 @@
     font-family: 'Ubuntu', sans-serif;
     box-sizing: border-box;
 }
-
 body {
     background: #fff;
 }
-
 .btn-primary {
     background-color: rgba( 71, 147, 227, 1);
     color: #fff;
     outline: none;
     border: none;
 }
-
 .btn-primary:hover {
     background-color: #4FC3A1;
     color: #fff;
 }
-
 .btn-green {
     background-color: green;
     color: #fff;
 }
-
 .btn-green:hover {
     color: green;
     background-color: #fff;
     border-color: green;
 }
-
 .btn-danger:hover {
     color: #dc3545;
     background-color: #fff;
 }
-
 .btn-primary-plus {
     background-color: #0d6efd;
     color: #ffff;
 }
-
 .btn-primary-plus:hover {
     background-color: #fff;
     color: #0d6efd;
 }
-
 .btn-danger:hover {
     color: #dc3545;
     background-color: #fff;
 }
-
 .form-group-image {
     display: flex;
     align-items: center;
     justify-content: center;
 }
-
 .form-group-image h1 {
     margin: 0px 30px;
 }
-
 .form-group-image {
     display: flex;
     align-items: center;
     justify-content: center;
 }
-
 .form-group-image h1 {
     margin: 0px 30px;
 }
-
 h2 {
     font-size: 18px;
     text-transform: uppercase;
@@ -77,7 +63,6 @@ h2 {
     color: black;
     padding: 30px 0;
 }
-
 .btn-center {
     width: 100%;
     display: flex;
@@ -125,6 +110,10 @@ h2 {
 /* Responsive table */
 
 @media (max-width: 767px) {
+    .col-2 {
+        flex-basis: 100%;
+        margin: 100px;
+    }
     .fl-table {
         display: block;
         width: 100%;
@@ -368,3 +357,50 @@ h2 {
     left: 40%;
     transform: translate(-40%, -40%);
 }
+
+.container {
+    max-width: 1300px;
+    margin: auto;
+    padding: 0px 25px 0px 25px;
+}
+
+.row {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.col-2 {
+    flex-basis: 60%;
+    margin: 100px;
+}
+
+.account-page {
+    padding: 50px 0;
+    background-color: var(--color-swapv2);
+}
+
+    .account-page .container .row {
+        justify-content: center;
+        align-items: center;
+    }
+
+        .account-page .container .row .col-2 {
+            width: 100%;
+        }
+
+.form-container {
+    background: #fff;
+    width: 100%;
+    text-align: center;
+    padding: 20px 0;
+    margin: auto;
+    box-shadow: 0px 0px 20px 0px rgba(255, 255, 255);
+    background-color: var(--color-swapv2);
+}
+
+    .form-container .text-danger {
+        color: red;
+        font-weight: normal;
+    }
